--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,85 @@
-body {
+/** @format */
+
+@import url("https://fonts.googleapis.com/css2?family=Aclonica&family=Poppins:wght@100;200;300;400;700&display=swap");
+:root {
+  --sections-bg-color: #dfe0e2;
+  --text-dark-color: #363946;
+  --text-light-color: #fff;
+  --icons-pink-color: #f564a9;
+  --poppins: "Poppins", sans-serif;
+  --aclonica: "Aclonica", sans-serif;
+  --background-light: rgb(245, 245, 245);
+  --bacground-overlay: rgba(117, 117, 117, 0.664);
+}
+* {
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  text-align: center;
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*::-webkit-scrollbar {
+  display: none;
+}
+.body {
+  max-width: 1200px;
+  margin: auto;
+}
+.icons {
+  color: var(--text-light-color);
+}
+.dark_btn {
+  border-radius: 20px;
+}
+.text_dark {
+  color: var(--text-gark-color);
+}
+.text_light {
+  color: var(--text-light-color);
+}
+.logo {
+  font-family: var(--aclonica);
+  color: var(--icons-pink-color);
+}
+a {
+  color: black;
+  text-decoration: none;
+}
+button {
+  border: none;
+  outline: none;
+  margin: auto;
+  padding: 10px 20px;
+  border-radius: 20px;
+  color: #fff;
+  font-weight: 700;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+}
+.card img {
+  width: 100%;
+  border: 0.5px solid rgba(0, 0, 0, 0.02);
+  margin-bottom: 20px;
+}
+.card p {
+  width: 80%;
+  margin: auto;
+}
+.card .price {
+  color: var(--icons-pink-color);
+  font-weight: 500;
+}
+.log_container a {
+  display: flex;
+  flex-direction: column;
+}
+.log_container a p {
+  text-align: center;
+}
+.log_container a .logo {
+  font-size: 25px;
 }
